--- a/_includes/comments/utterances.html
+++ b/_includes/comments/utterances.html
@@ -2,6 +2,7 @@
 <script src="https://utteranc.es/client.js"
         repo="{{ site.comments.utterances.repo }}"
         issue-term="{{ site.comments.utterances.issue_term }}"
+        theme="github-light"
         crossorigin="anonymous"
         async>
 </script>
