Delete Post Preview Text

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,13 +46,15 @@ layout: page
     <h1>
       <a href="{{ post.url | relative_url }}">{{ post.title }}</a>
     </h1>
-
+    <!--포스트 본문 미리보기-->
+    <!--
     <div class="post-content">
       <p>
         {% include no-linenos.html content=post.content %}
         {{ content | markdownify | strip_html | truncate: 200 | escape }}
       </p>
     </div>
+    -->
 
     <div class="post-meta text-muted d-flex">
       <div class="mr-auto">
