Delete Related Post Preview

--- a/_includes/related-posts.html
+++ b/_includes/related-posts.html
@@ -88,12 +88,15 @@
           <div class="card-body">
             {% include datetime.html date=post.date class="small" %}
             <h3 class="pt-0 mt-1 mb-3" data-toc-skip>{{ post.title }}</h3>
+            <!--포스트 하단 - 연관 포스트 본문 미리보기-->
+            <!--
             <div class="text-muted small">
               <p>
                 {% include no-linenos.html content=post.content %}
                 {{ content | markdownify | strip_html | truncate: 200 | escape }}
               </p>
             </div>
+            -->
           </div>
         </a>
       </div>
