--- a/_sass/colors/dark-typography.scss
+++ b/_sass/colors/dark-typography.scss
@@ -162,7 +162,7 @@
       );
   }
 
-  color-scheme: dark;
+  color-scheme: light;
 
   #disqus_thread { /* stylelint-disable-line selector-id-pattern */
     color-scheme: none;
